# checksumo

./: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  meson.build  meson_post_install.sh  model.go  model_test.go  presenter.go  resources.go  resources.h  ui.glade  ui.glade~  view.go
.github/workflows/: cd.yml  ci.yml
data/: app.ui  checksumo.appdata.xml  checksumo.desktop  checksumo.gresource.xml  checksumo.gschema.xml  checksumo.ui  checksumo.yml  com.github.dawidd6.checksumo.appdata.xml.in  com.github.dawidd6.checksumo.desktop.in  com.github.dawidd6.checksumo.gresource.xml  com.github.dawidd6.checksumo.ui  data.gresource.xml  meson.build  ui.glade
debian/: changelog  control  copyright  gbp.conf  install  rules
pkg/controller/: controller.go
pkg/model/: model.go  model_test.go
pkg/view/: view.go
po/: POTFILES  com.github.dawidd6.checksumo.pot  de.po  default.pot  pl.po  ru.po
snap/: snapcraft.yaml
src/: main.go  meson.build
src/constants/: constants.go
src/controller/: controller.go
src/model/: model.go  model_test.go
src/models/: main_model.go  main_model_test.go  models_test.go
src/presenters/: main_presenter.go
src/settings/: settings.go
src/utils/: utils.go
src/view/: view.go
src/views/: main_view.go  settings_view.go  views.go
ui/: com.github.dawidd6.checksumo.gresource.xml  main_view.ui  meson.build  settings_view.ui  ui.gresource.xml
